# unsupervised-induction

./: README.md  pyproject.toml  requirements.txt
scripts/: run_pipeline.py
src/nepali_morphology/: __init__.py  cli.py  clustering.py  config.py  context.py  data.py  morpheme.py  paradigm.py  pipeline.py  segment.py
src/outputs/: paradigms.json  pos_clusters.json  segmentation_samples.json
