[project]
name = "nepali-morphology-pipeline"
version = "0.1.0"
description = "Unsupervised PoS induction and morphology segmentation for Nepali"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "datasets>=2.19.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.4.0",
  "tqdm>=4.66.0"
]

[project.scripts]
nepali-morphology = "nepali_morphology.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
